...
            android:layout_gravity="center"
            android:textSize="18sp"
            android:visibility="gone"
            android:layout_marginTop="50dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerInventory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        app:tint="@android:color/white" />
...
