...
            android:layout_height="1dp"
            android:background="#EEEEEE"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnItemDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="הצג פירוט מלא"
            android:textSize="12sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:insetTop="0dp"
...
